Issue #70 Add color variable for links with good contrast

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -39,7 +39,7 @@
 }
 
 a {
-  color: $color-primary;
+  color: $color-link;
   font-weight: $font-weight-semi-bold;
 }
 
