--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $color-tc39: #f90;
 $color-primary: #7cb;
+$color-link: #017e78;
 $color-text: #000;
 $color-nav: #444;
 $color-spacer: #eee;
